UF-10027: Add municipalityId
