# src/integration-test/resources/openapi.yaml
@@ -1,55 +1,91 @@
 openapi: 3.0.1
 info:
   title: api-invoicecache
-  contact: {}
+  contact: { }
   license:
     name: MIT License
     url: https://opensource.org/licenses/MIT
-  version: "2.0"
+  version: "3.0"
+servers:
+  - url: http://localhost:53165
+    description: Generated server url
 paths:
-  /invoices:
+  /{municipalityId}/invoices:
     get:
       tags:
         - Invoice Cache
       summary: Search for and fetch invoices
       operationId: getInvoices
       parameters:
+        - name: municipalityId
+          in: path
+          description: Municipality id
+          required: true
+          schema:
+            type: string
+          example: 2281
         - name: request
           in: query
           required: true
           schema:
-            $ref: '#/components/schemas/InvoiceFilterRequest'
+            $ref: "#/components/schemas/InvoiceFilterRequest"
       responses:
-        "200":
-          description: Successful Operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/InvoicesResponse'
-        "500":
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Problem'
         "400":
           description: Bad Request
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Problem'
+                $ref: "#/components/schemas/Problem"
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Problem"
+        "200":
+          description: Successful Operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/InvoicesResponse"
     post:
       tags:
         - Invoice Cache
       summary: Create/import an invoice
       operationId: importInvoice
+      parameters:
+        - name: municipalityId
+          in: path
+          description: Municipality id
+          required: true
+          schema:
+            type: string
+          example: 2281
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/InvoicePdfRequest'
+              $ref: "#/components/schemas/InvoicePdfRequest"
         required: true
       responses:
+        "400":
+          description: Bad Request
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Problem"
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/Problem"
+        "500":
+          description: Internal Server Error
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Problem"
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/Problem"
         "201":
           description: Successful Operation
           headers:
@@ -58,31 +94,20 @@ paths:
               schema:
                 type: string
           content:
-            '*/*': {}
-        "500":
-          description: Internal Server Error
-          content:
-            application/problem+json:
-              schema:
-                $ref: '#/components/schemas/Problem'
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Problem'
-        "400":
-          description: Bad Request
-          content:
-            application/problem+json:
-              schema:
-                $ref: '#/components/schemas/Problem'
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Problem'
-  /invoices/{issuerlegalid}/{invoicenumber}/pdf:
+            '*/*': { }
+  /{municipalityId}/invoices/{issuerlegalid}/{invoicenumber}/pdf:
     get:
       tags:
         - Invoice Cache
       operationId: getInvoicePdf
       parameters:
+        - name: municipalityId
+          in: path
+          description: Municipality id
+          required: true
+          schema:
+            type: string
+          example: 2281
         - name: issuerlegalid
           in: path
           required: true
@@ -129,25 +154,32 @@ paths:
               - FINAL_INVOICE
               - CONSOLIDATED_INVOICE
       responses:
-        "500":
-          description: Internal Server Error
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Problem'
         "400":
           description: Bad Request
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/Problem'
-  /invoices/{filename}:
+                $ref: "#/components/schemas/Problem"
+        "500":
+          description: Internal Server Error
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Problem"
+  /{municipalityId}/invoices/{filename}:
     get:
       tags:
         - Invoice Cache
       summary: Fetch an invoice PDF via filename
       operationId: getInvoicePdf_1
       parameters:
+        - name: municipalityId
+          in: path
+          description: Municipality id
+          required: true
+          schema:
+            type: string
+          example: 2281
         - name: filename
           in: path
           required: true
@@ -159,25 +191,25 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/InvoicePdfResponse'
-        "404":
-          description: Not Found
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Problem'
-        "500":
-          description: Internal Server Error
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Problem'
+                $ref: "#/components/schemas/InvoicePdfResponse"
         "400":
           description: Bad Request
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/Problem'
+                $ref: "#/components/schemas/Problem"
+        "500":
+          description: Internal Server Error
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Problem"
+        "404":
+          description: Not Found
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Problem"
   /api-docs:
     get:
       tags:
@@ -240,7 +272,7 @@ components:
             - FINAL_INVOICE
             - CONSOLIDATED_INVOICE
         attachment:
-          $ref: '#/components/schemas/InvoicePdf'
+          $ref: "#/components/schemas/InvoicePdf"
     Problem:
       type: object
       properties:
@@ -254,12 +286,12 @@ components:
           type: object
           additionalProperties:
             type: object
+        status:
+          $ref: "#/components/schemas/StatusType"
         title:
           type: string
         detail:
           type: string
-        status:
-          $ref: '#/components/schemas/StatusType'
     StatusType:
       type: object
       properties:
@@ -268,6 +300,71 @@ components:
         statusCode:
           type: integer
           format: int32
+    InvoiceFilterRequest:
+      type: object
+      properties:
+        page:
+          minimum: 1
+          type: integer
+          description: Page number
+          format: int32
+          example: 1
+          default: 1
+        limit:
+          maximum: 1000
+          minimum: 1
+          type: integer
+          description: Result size per page
+          format: int32
+          example: 100
+          default: 100
+        invoiceDateFrom:
+          type: string
+          description: Fetch invoices from (and including) this date.
+          format: date
+          example: 2022-01-01
+        invoiceDateTo:
+          type: string
+          description: "Fetch invoices up to (and including) this date, includes invoices\
+            \ to this date"
+          format: date
+          example: 2022-12-31
+        dueDateFrom:
+          type: string
+          description: Fetch invoices that are due from (and including) this date.
+          format: date
+          example: 2022-01-01
+        dueDateTo:
+          type: string
+          description: Fetch invoices that are due up to (and including) this date
+          format: date
+          example: 2022-12-31
+        partyIds:
+          type: array
+          description: List of partyIds for organizations or private firms
+          example:
+            - fb2f0290-3820-11ed-a261-0242ac120002
+            - fb2f0290-3820-11ed-a261-0242ac120003
+          items:
+            type: string
+            description: List of partyIds for organizations or private firms
+            example: "[\"fb2f0290-3820-11ed-a261-0242ac120002\",\"fb2f0290-3820-11ed-a261-0242ac120003\"\
+              ]"
+        ocrNumber:
+          type: string
+          description: Ocr number for the invoice
+          example: "8907131234"
+        invoiceNumbers:
+          type: array
+          description: Invoice numbers to fetch
+          example:
+            - "1234567"
+            - "2345678"
+          items:
+            type: string
+            description: Invoice numbers to fetch
+            example: "[\"1234567\",\"2345678\"]"
+      description: Invoice filter request model
     Address:
       type: object
       properties:
@@ -377,7 +474,7 @@ components:
             - FINAL_INVOICE
             - CONSOLIDATED_INVOICE
         invoiceAddress:
-          $ref: '#/components/schemas/Address'
+          $ref: "#/components/schemas/Address"
       description: Model for the Invoice
     InvoicesResponse:
       type: object
@@ -385,9 +482,9 @@ components:
         invoices:
           type: array
           items:
-            $ref: '#/components/schemas/Invoice'
+            $ref: "#/components/schemas/Invoice"
         _meta:
-          $ref: '#/components/schemas/MetaData'
+          $ref: "#/components/schemas/MetaData"
       description: Response with invoices
     MetaData:
       type: object
@@ -424,71 +521,6 @@ components:
           example: 23
       description: Metadata model
       readOnly: true
-    InvoiceFilterRequest:
-      type: object
-      properties:
-        page:
-          minimum: 1
-          type: integer
-          description: Page number
-          format: int32
-          example: 1
-          default: 1
-        limit:
-          maximum: 1000
-          minimum: 1
-          type: integer
-          description: Result size per page
-          format: int32
-          example: 100
-          default: 100
-        invoiceDateFrom:
-          type: string
-          description: Fetch invoices from (and including) this date.
-          format: date
-          example: 2022-01-01
-        invoiceDateTo:
-          type: string
-          description: "Fetch invoices up to (and including) this date, includes invoices\
-            \ to this date"
-          format: date
-          example: 2022-12-31
-        dueDateFrom:
-          type: string
-          description: Fetch invoices that are due from (and including) this date.
-          format: date
-          example: 2022-01-01
-        dueDateTo:
-          type: string
-          description: Fetch invoices that are due up to (and including) this date
-          format: date
-          example: 2022-12-31
-        partyIds:
-          type: array
-          description: List of partyIds for organizations or private firms
-          example:
-            - fb2f0290-3820-11ed-a261-0242ac120002
-            - fb2f0290-3820-11ed-a261-0242ac120003
-          items:
-            type: string
-            description: List of partyIds for organizations or private firms
-            example: "[\"fb2f0290-3820-11ed-a261-0242ac120002\",\"fb2f0290-3820-11ed-a261-0242ac120003\"\
-              ]"
-        ocrNumber:
-          type: string
-          description: Ocr number for the invoice
-          example: "8907131234"
-        invoiceNumbers:
-          type: array
-          description: Invoice numbers to fetch
-          example:
-            - "1234567"
-            - "2345678"
-          items:
-            type: string
-            description: Invoice numbers to fetch
-            example: "[\"1234567\",\"2345678\"]"
-      description: Invoice filter request model
     InvoicePdfResponse:
       required:
         - attachment
@@ -515,5 +547,5 @@ components:
             - FINAL_INVOICE
             - CONSOLIDATED_INVOICE
         attachment:
-          $ref: '#/components/schemas/InvoicePdf'
-  securitySchemes: {}
+          $ref: "#/components/schemas/InvoicePdf"
+  securitySchemes: { }
